Bug 378772 - kleopatra selftest: a missing /usr/bin/gpgsm binary is shown as 'v1.0 too old'
Summary: kleopatra selftest: a missing /usr/bin/gpgsm binary is shown as 'v1.0 too old'
Status: RESOLVED FIXED
Alias: None
Product: kleopatra
Classification: Applications
Component: general (other bugs)
Version First Reported In: 2.3.0
Platform: Neon Linux
: NOR normal
Target Milestone: ---
Assignee: Andre Heinecke
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2017-04-14 11:33 UTC by Achim Bohnet
Modified: 2017-04-18 13:44 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 17.04
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Achim Bohnet 2017-04-14 11:33:24 UTC
reproduce:
 * mv /usr/bin/gpgsm{,.away}
 * rerun selftest or restart kleopatra
 * Error dialog pops up: gpgsm (smime backend) installation: too old
   with details: Backend /usr/bin/gpgsm is installed in version 1.0.0, but at least version 2.0.4 is required.


expected:
 * Result should be 'not found'  and Details: Backend /usr/bin/gpgsm is not found.

reproducability: always
Comment 1 Andre Heinecke 2017-04-18 13:44:07 UTC
I'm going with the "not properly installed" branch as we don't differentiate if gpgsm can't be started because a libarary can't be loaded or the file does not exist etc.

This means it was available at the compile time of gpgme, and enabled during the gpg build but is no longer there. The problem here is a fallback in gpgme that reports version 1.0.0 becasue gpgsm 1.0 did not support --version and would error out.
Comment 2 Andre Heinecke 2017-04-18 13:44:26 UTC
Git commit fbf28dc043a9d0bf1a8d774435bedf4d23969656 by Andre Heinecke.
Committed on 18/04/2017 at 13:33.
Pushed by aheinecke into branch 'Applications/17.04'.

Fix selftest for gpgsm installation

Treat a reported version of gpgsm just as "not properly installed"
it is highly unlikely to encounter a gpgsm 1.0 in the wild but
this version is reported as a fallback by gpgme if gpgsm --version
returns an error.
FIXED-IN: 17.04

M  +4    -1    src/selftest/enginecheck.cpp

https://commits.kde.org/kleopatra/fbf28dc043a9d0bf1a8d774435bedf4d23969656