Fix selftest for gpgsm installation

Treat a reported version of gpgsm just as "not properly installed"
it is highly unlikely to encounter a gpgsm 1.0 in the wild but
this version is reported as a fallback by gpgme if gpgsm --version
returns an error.

BUG: 378772
FIXED-IN: 17.04